; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs3xdr.c_xdr_decode_time3.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs3xdr.c_xdr_decode_time3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, %struct.timespec*)* @xdr_decode_time3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @xdr_decode_time3(i32* %0, %struct.timespec* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.timespec*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.timespec* %1, %struct.timespec** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = getelementptr inbounds i32, i32* %5, i32 1
  store i32* %6, i32** %3, align 8
  %7 = load i32, i32* %5, align 4
  %8 = call i8* @ntohl(i32 %7)
  %9 = load %struct.timespec*, %struct.timespec** %4, align 8
  %10 = getelementptr inbounds %struct.timespec, %struct.timespec* %9, i32 0, i32 1
  store i8* %8, i8** %10, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = getelementptr inbounds i32, i32* %11, i32 1
  store i32* %12, i32** %3, align 8
  %13 = load i32, i32* %11, align 4
  %14 = call i8* @ntohl(i32 %13)
  %15 = load %struct.timespec*, %struct.timespec** %4, align 8
  %16 = getelementptr inbounds %struct.timespec, %struct.timespec* %15, i32 0, i32 0
  store i8* %14, i8** %16, align 8
  %17 = load i32*, i32** %3, align 8
  ret i32* %17
}

declare dso_local i8* @ntohl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
